Fixes for new HTTP layer (#295)